# esp32flight

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  manifest.json  partitions.csv  sdkconfig.defaults
.cache/clangd/index/: airlines.c.5B48892CE576F769.idx  airlines.h.1853338B5F581076.idx  airports.c.23DCDDB0103125CB.idx  airports.h.6C82A2ECB4D3BB7A.idx  animimg001.c.DCD8EB739069E617.idx  animimg002.c.7D43FBA6DFB2AD12.idx  animimg003.c.414A2501F77260AE.idx  esp_lcd_touch.c.39C5514ECAFAF6BF.idx  esp_lcd_touch.h.9C3394D8ABB25099.idx  esp_lcd_touch_gt911.c.E79D0B2AB11DAC36.idx  esp_lcd_touch_gt911.h.D2456D90BF154E3D.idx  faflight.c.605D70E271617486.idx  faflight.h.584348E6A055E211.idx  flight_data.c.00299156A1AFD870.idx  flight_data.h.975DBA0676091EAC.idx  flight_model.h.3EEAC376B8D75610.idx  flight_task.c.46EE8D2699DBC1E8.idx  flight_task.h.4403F9CE6921A914.idx  (+622 more)
.github/: FUNDING.yml
assets/: runways.tsv
assets/logos/: README.txt
main/: CMakeLists.txt  Kconfig.projbuild  airlines.c  airlines.h  airports.c  airports.h  alertlog.c  alertlog.h  dailystats.c  dailystats.h  faflight.c  faflight.h  flags.c  flags.h  flight_data.c  flight_data.h  flight_model.h  flight_task.c  flight_task.h  font_pl_14.c  font_pl_16.c  font_pl_20.c  fonts.h  geo_math.c  geo_math.h  geocode.c  geocode.h  geolocate.c  geolocate.h  http_util.c  http_util.h  idf_component.yml  img_plane.c  jpeg_dec.c  jpeg_dec.h  lang.c  lang.h  logos.c  logos.h  main.c  (+40 more)
tools/: fetch_airports.sh  fetch_flags.sh  fetch_logos.sh  fetch_runways.sh  gen_fonts.sh  gen_plane_sprite.sh
